--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <header>Pratos típicos brasileiros</header>
+    <header>voleibol</header>
     <section>
         <div>
             <h1></h1>
