--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <header>voleibol</header>
     <section>
         <div>
-            <h1></h1>
-            <h2> Paraná</h2>
-            <p></p>
+            <h1>Voleibol</h1>
+            
+            <p>O voleibol ou vôlei é um esporte coletivo praticado em uma quadra dividida por uma rede. Duas equipes disputam a partida com o objetivo de tocar a bola no campo adversário, a qual deve ser arremessada por cima da rede. O esporte é um dos mais populares no Brasil e no mundo em termos de praticantes e audiência.</p>
         </div>
+    </section>
         <div>
+            <section>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/SRlH2Ef4Njc?si=_oO1gIiISqa1Ihsi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
